--- a/index.html
+++ b/index.html
@@ -30,8 +30,9 @@
 		</ul>
 	</div> -->
 	<!-- <button id="clickMe">click me</button> -->
-	<!-- <p id="text">this is my webpage.</p>
-	<button id="btn1">click</button> -->
+	 <p id="text"> Hello this is my webpage.</p>
+<!--
+	<button id="btn1">click</button> 
 
 	<p id="p1">Hello world</p>
 	<p id="p2">Hello zm</p>
@@ -44,5 +45,6 @@
 	<button id="btn4">turn</button>
 	<p id="p5">hello world</p>
 	<button id="btn5">click me</button>
+-->
 </body>
 </html>
